--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "type": "module",
   "name": "odin-battleship",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch"
+    "watch": "jest --watch",
+    "start": "webpack serve --open --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js",
+    "publish": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +18,13 @@
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^6.0.1"
   }
 }
